// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli > @unocss-skip uno.css 1`] = `
"/* layer: default */
.w-10{width:2.5rem;}"
`;

exports[`cli > builds uno.css 1`] = `
"/* layer: default */
.max-w-screen-md{max-width:768px;}
.p-4{padding:1rem;}"
`;

exports[`cli > supports directives transformer 1`] = `""`;

exports[`cli > supports directives transformer 2`] = `".btn-center{@apply text-center my-0 font-medium;}"`;

exports[`cli > supports unocss.config.js 1`] = `
"/* layer: shortcuts */
.box{margin-left:auto;margin-right:auto;max-width:80rem;border-radius:0.375rem;--un-bg-opacity:1;background-color:rgb(243 244 246 / var(--un-bg-opacity)) /* #f3f4f6 */;padding:1rem;--un-shadow:var(--un-shadow-inset) 0 1px 2px 0 var(--un-shadow-color, rgb(0 0 0 / 0.05));box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);}"
`;

exports[`cli > supports updating source files with transformed utilities ('directives transformer') 1`] = `""`;

exports[`cli > supports updating source files with transformed utilities ('directives transformer') 2`] = `".btn-center{margin-top:0;margin-bottom:0;text-align:center;font-weight:500;}"`;

exports[`cli > supports updating source files with transformed utilities ('variant group transformer') 1`] = `
"/* layer: default */
.border-red{--un-border-opacity:1;border-color:rgb(248 113 113 / var(--un-border-opacity));}
.border-solid{border-style:solid;}
.p-4{padding:1rem;}"
`;

exports[`cli > supports updating source files with transformed utilities ('variant group transformer') 2`] = `"<div class="p-4 border-solid border-red"></div>"`;

exports[`cli > supports variantGroup transformer 1`] = `
"/* layer: default */
.border-red{--un-border-opacity:1;border-color:rgb(248 113 113 / var(--un-border-opacity));}
.border-solid{border-style:solid;}
.p-4{padding:1rem;}"
`;

exports[`cli > supports variantGroup transformer 2`] = `"<div class="p-4 border-(solid red)"></div>"`;
